--- a/Buptis/Resources/layout/LokayonDetayBaseActivity.axml
+++ b/Buptis/Resources/layout/LokayonDetayBaseActivity.axml
@@ -6,132 +6,7 @@
 	android:id="@+id/rootView"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent">
-	
-	<RelativeLayout
-		android:layout_marginBottom="25dp"
-		android:layout_alignParentBottom="true"
-		android:minWidth="25px"
-		android:minHeight="25px"
-		android:layout_width="match_parent"
-		android:layout_height="wrap_content"
-		android:id="@+id/relativeLayout3">
-		<LinearLayout
-			android:layout_centerHorizontal="true"
-			android:orientation="horizontal"
-			android:minWidth="25px"
-			android:minHeight="25px"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:id="@+id/linearLayout3">
-			<ImageButton
-				android:padding="15dp"
-				android:scaleType="centerInside"
-				android:background="@drawable/pindusunuyorbf"
-				android:src="@mipmap/timee"
-				android:layout_width="70dp"
-				android:layout_height="70dp"
-				android:id="@+id/checkinwait" />
-			<ImageButton
-				android:layout_marginLeft="15dp"
-				android:padding="15dp"
-				android:scaleType="centerInside"
-				android:background="@drawable/pinyapbg2"
-				android:src="@mipmap/pinn"
-				android:layout_width="70dp"
-				android:layout_height="70dp"
-				android:id="@+id/checkin" />
-		</LinearLayout>
-	</RelativeLayout>
-	<LinearLayout
-		android:layout_above="@+id/relativeLayout3"
-		android:layout_marginTop="25dp"
-		android:orientation="vertical"
-		android:minWidth="25px"
-		android:minHeight="25px"
-		android:layout_width="match_parent"
-		android:layout_height="match_parent"
-		android:id="@+id/linearLayout4"
-		android:layout_marginBottom="11.5dp">
-		<ScrollView
-			android:minWidth="25px"
-			android:minHeight="25px"
-			android:layout_width="match_parent"
-			android:layout_height="match_parent"
-			android:id="@+id/scrollView1" >
-			<LinearLayout
-				android:orientation="vertical"
-				android:minWidth="25px"
-				android:minHeight="25px"
-				android:layout_width="match_parent"
-				android:layout_height="match_parent"
-				android:id="@+id/linearLayout5" >
-				<FrameLayout
-					android:minWidth="25px"
-					android:minHeight="25px"
-					android:layout_width="match_parent"
-					android:layout_height="280.5dp"
-					android:id="@+id/frameLayout1" />
-				<RelativeLayout
-					android:layout_marginTop="20dp"
-					android:minWidth="25px"
-					android:minHeight="25px"
-					android:layout_width="match_parent"
-					android:layout_height="wrap_content"
-					android:id="@+id/relativeLayout4">
-					<LinearLayout
-						android:layout_centerHorizontal="true"
-						android:orientation="horizontal"
-						android:minWidth="25px"
-						android:minHeight="25px"
-						android:layout_width="wrap_content"
-						android:layout_height="80dp"
-						android:id="@+id/linearLayout6">
-					<ImageButton
-						android:padding="20dp"
-						android:scaleType="centerInside"
-						android:src="@mipmap/konumicon2"
-						android:background="@drawable/beyazovalbg2"
-						android:layout_width="80dp"
-						android:layout_height="match_parent"
-						android:id="@+id/ımageButton4" />
-					<Button
-						android:layout_marginRight="40dp"
-						android:layout_marginLeft="40dp"
-						android:textSize="25dp"
-						android:text="2.7"
-						android:textColor="#fff"
-						android:padding="20dp"
-						android:scaleType="centerInside"
-						android:background="@mipmap/stariconn2"
-						android:layout_width="80dp"
-						android:layout_height="match_parent"
-						android:id="@+id/ımageButton5" />
-					<ImageButton
-						android:padding="23dp"
-						android:scaleType="centerInside"
-						android:src="@mipmap/phonoiconn"
-						android:background="@drawable/beyazovalbg2"
-						android:layout_width="80dp"
-						android:layout_height="match_parent"
-						android:id="@+id/ımageButton6" />
-				</LinearLayout>
-				</RelativeLayout>
-				<Button
-					
-					android:layout_marginLeft="30dp"
-					android:layout_marginRight="30dp"
-					android:layout_marginTop="25dp"
-					android:background="@drawable/custombuton"
-					android:textSize="23dp"
-					android:text="Mekandakiler"
-					android:textColor="#fff"
-					android:layout_width="match_parent"
-					android:layout_height="55dp"
-					android:id="@+id/button1" />
-			</LinearLayout>
-		</ScrollView>
-	</LinearLayout>
-<LinearLayout
+	 <LinearLayout
 		android:background="@drawable/lokasyonlarheadergradient"
 		android:orientation="vertical"
 		android:minWidth="25px"
@@ -181,4 +56,116 @@
 				android:id="@+id/textView1" />
 		</RelativeLayout>
 	</LinearLayout>
+    <RelativeLayout
+        android:layout_below="@+id/linearLayout1"
+        android:layout_above="@+id/relativeLayout3"
+        android:orientation="vertical"
+        android:minWidth="25px"
+        android:minHeight="25px"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/linearLayout4"
+        android:layout_marginBottom="11.5dp">
+        <FrameLayout
+            android:layout_alignParentTop="true"
+            android:layout_above="@+id/relativeLayout4"
+            android:minWidth="25px"
+            android:minHeight="25px"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/frameLayout1" />
+        <RelativeLayout
+                android:layout_above="@+id/button1"
+                android:layout_marginTop="20dp"
+                android:minWidth="25px"
+                android:minHeight="25px"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/relativeLayout4">
+                <LinearLayout
+                    android:layout_centerHorizontal="true"
+                    android:orientation="horizontal"
+                    android:minWidth="25px"
+                    android:minHeight="25px"
+                    android:layout_width="wrap_content"
+                    android:layout_height="80dp"
+                    android:id="@+id/linearLayout6">
+                    <ImageButton
+                        android:padding="20dp"
+                        android:scaleType="centerInside"
+                        android:src="@mipmap/konumicon2"
+                        android:background="@drawable/beyazovalbg2"
+                        android:layout_width="80dp"
+                        android:layout_height="match_parent"
+                        android:id="@+id/ımageButton4" />
+                    <Button
+                        android:layout_marginRight="40dp"
+                        android:layout_marginLeft="40dp"
+                        android:textSize="25dp"
+                        android:text="2.7"
+                        android:textColor="#fff"
+                        android:padding="20dp"
+                        android:scaleType="centerInside"
+                        android:background="@mipmap/stariconn2"
+                        android:layout_width="80dp"
+                        android:layout_height="match_parent"
+                        android:id="@+id/ımageButton5" />
+                    <ImageButton
+                        android:padding="23dp"
+                        android:scaleType="centerInside"
+                        android:src="@mipmap/phonoiconn"
+                        android:background="@drawable/beyazovalbg2"
+                        android:layout_width="80dp"
+                        android:layout_height="match_parent"
+                        android:id="@+id/ımageButton6" />
+                </LinearLayout>
+            </RelativeLayout>
+        <Button
+                android:layout_alignParentBottom="true"
+                android:layout_marginLeft="30dp"
+                android:layout_marginRight="30dp"
+                android:layout_marginTop="25dp"
+                android:background="@drawable/custombuton"
+                android:textSize="23dp"
+                android:text="Mekandakiler"
+                android:textColor="#fff"
+                android:layout_width="match_parent"
+                android:layout_height="55dp"
+                android:id="@+id/button1" />
+    </RelativeLayout>
+     <RelativeLayout
+		android:layout_marginBottom="25dp"
+		android:layout_alignParentBottom="true"
+		android:minWidth="25px"
+		android:minHeight="25px"
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:id="@+id/relativeLayout3">
+		<LinearLayout
+			android:layout_centerHorizontal="true"
+			android:orientation="horizontal"
+			android:minWidth="25px"
+			android:minHeight="25px"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:id="@+id/linearLayout3">
+			<ImageButton
+				android:padding="15dp"
+				android:scaleType="centerInside"
+				android:background="@drawable/pindusunuyorbf"
+				android:src="@mipmap/timee"
+				android:layout_width="70dp"
+				android:layout_height="70dp"
+				android:id="@+id/checkinwait" />
+			<ImageButton
+				android:layout_marginLeft="15dp"
+				android:padding="15dp"
+				android:scaleType="centerInside"
+				android:background="@drawable/pinyapbg2"
+				android:src="@mipmap/pinn"
+				android:layout_width="70dp"
+				android:layout_height="70dp"
+				android:id="@+id/checkin" />
+		</LinearLayout>
+	</RelativeLayout>
 </RelativeLayout>
