--- a/Buptis/Resources/layout/PrivateProfileFiltreleActivity.axml
+++ b/Buptis/Resources/layout/PrivateProfileFiltreleActivity.axml
@@ -122,7 +122,7 @@
                 android:id="@+id/textView3" />
             <TextView
                 android:text="24"
-                android:layout_toRightOf="@+id/textView3"
+                android:layout_toLeftOf="@+id/textView5"
                 android:layout_marginLeft="200dp"
                 android:textSize="18dp"
                 android:textColor="#221E20"
@@ -131,15 +131,16 @@
                 android:id="@+id/textView4" />
              <TextView
                 android:text="-"
-                android:layout_toRightOf="@+id/textView4"
+                android:layout_toLeftOf="@+id/textView6"
                 android:textSize="18dp"
                 android:textColor="#221E20"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/textView5" />
             <TextView
+				android:layout_marginRight="20dp"
+				android:layout_alignParentRight="true"
                 android:text="54"
-                android:layout_toRightOf="@+id/textView5"
                 android:textSize="18dp"
                 android:textColor="#221E20"
                 android:layout_width="wrap_content"
